--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <header>
                 <h2><em>Oliver Henriksen</em></h2>
                 <h3>2023-2-2</h3>
-                <img src="photo%20of%20me.png" >
+                <img src="photo%20of%20me.png" alt="the famous Oli" >
             </header>
             <section>
                 <p><strong>Day 1</strong></p><ol>
